...
    <string name="preference_privacy_storage_clear_browsing_data">Clear browsing data</string>
    <string name="preference_privacy_storage_save_downloads_to">Save downloads to </string>

    <!-- This preference does not set Firefox Lite as the default browser but instead links to Android's
     "default apps" screen, on older Android versions, we try to reset user's current default
     browser and let user choose again if they want to always open links with Firefox Lite. -->
    <string name="preference_default_browser">Set as default browser</string>
    <!-- In the "Make default browser" preference entry, there is an optional description field
    which is empty before the entry is tapped. When a user taps the entry and the change is
    applying, this message is shown as the description. -->
    <string name="preference_default_browser_is_setting">Changing settings…</string>

    <string name="preference_turbo_mode">Turbo mode</string>
...
    <string name="setting_dialog_search_history">Search history</string>
    <string name="setting_dialog_form_history">Form history</string>
    <string name="setting_dialog_cookies">Cookies</string>
    <string name="setting_dialog_cache">Cache</string>

    <!-- Download list-->
    <string name="no_downloads">No downloads</string>
    <string name="download_started">Downloading…</string>
    <string name="download_file_not_supported">Download protocol not supported</string>
    <string name="cannot_find_the_file">Cannot find the file</string>
    <string name="cannot_delete_the_file">Cannot delete the file.</string>
    <string name="download_completed">%1$s downloaded</string>
    <string name="download_deleted">%1$s was deleted</string>
...
    <!-- Setting data saving path dialog -->
    <string name="setting_dialog_sd_card">SD card</string>
    <string name="setting_dialog_internal_storage">Internal storage</string>

    <!--BrowsingHistoryActivity-->
    <string name="browsing_history_clear_btn">CLEAR BROWSING HISTORY</string>
    <string name="browsing_history_empty_view_msg">No browsing history</string>
    <string name="browsing_history_date_today">Today</string>
    <string name="browsing_history_date_yesterday">Yesterday</string>
    <string name="browsing_history_menu_delete">Delete</string>
    <string name="browsing_history_dialog_confirm_clear_message">Clear all browsing history?</string>
    <string name="browsing_history_dialog_btn_clear">Clear</string>

...
    <!-- Snack bar message -->
    <string name="message_fallback_save_to_primary_external">No SD card detected. File was saved to internal storage.</string>
    <string name="message_start_to_save_to_removable_storage">File saved to SD card</string>
    <string name="message_removable_storage_space_not_enough">SD card is almost full. File was saved to internal storage.</string>

    <!-- ScreenshotGridFragment-->
    <string name="screenshot_grid_empty_text_title">No screenshots</string>

    <!-- This string is followed by the image of the button, keep the trailing whitespace.
        Final result: 'Tap [image] on the menu to capture an entire web page'. -->
    <string name="screenshot_grid_empty_text_msg_prefix">Tap&#160;</string>

    <!-- This string is preceded by the image of the button, keep the leading whitespace.
...
    <string name="screenshot_image_viewer_dialog_delete_msg">Delete this image?</string>

    <!-- Title for file picker when user trying to upload a file -->
    <string name="file_picker_title">Choose a file to upload</string>

    <!-- Toast message -->
    <string name="message_enable_turbo_mode">Turbo mode enabled</string>
    <string name="message_disable_turbo_mode">Turbo mode disabled</string>
    <string name="message_enable_block_image">Now blocking images</string>
    <string name="message_disable_block_image">Now showing images</string>
    <string name="message_clear_cache_fail">Unable to clear cache</string>
    <string name="message_storage_unavailable_cancel_download">Storage inaccessible. Download canceled.</string>
    <string name="message_exit_app">Press BACK again to exit</string>

    <!-- Message indicate how much cache file cause disk storage was cleared.
        Argument 1 is the amount, i.e. 15.0 MB cache cleared -->
...
    <!-- Show snack bar so users can tap to update the apk -->
    <string name="update_to_latest_app_snack_bar_message">Latest build downloaded</string>
    <!-- Show snack bar so users can tap to update the apk -->
    <string name="update_to_latest_app_snack_bar_update">UPDATE</string>
   
    <!-- In-app notification, Privacy policy update -->
    <string name="privacy_policy_update_notification_title">Product Update Notice</string>
    <string name="privacy_policy_update_notification_action">To make Firefox Lite better for you and everyone, we made some changes to our privacy policy. Tap to learn more.</string>


    <!--In-app Promotion, Set default browser-->
    <!--Show a toast message when user set Firefox Lite as default browser successfully. The %1$s is Firefox Lite.-->
    <string name="message_set_default_success">Thanks for choosing %1$s!</string>
...
    <string name="always">Always</string>
    <!--Button on the dialog of setting default browser. Tap this button will go to system settings-->
    <string name="setting_default_browser_instruction_button">Go to settings</string>
   
    <!-- In-app Promotion, Rate the App-->
    <!-- The title of the Message to prompt users to rate Rocket on Play Store, %1$s is the App name i.e. Rocket. -->
    <string name="rate_app_dialog_text_title">Love %1$s?</string>
    <string name="rate_app_dialog_text_content">Thank you for choosing our product. Your feedback is important to us.</string>
    <string name="rate_app_dialog_btn_go_rate">Rate Us</string>
    <string name="rate_app_notification_action_rate">RATE US</string>
    <string name="rate_app_dialog_btn_feedback">Leave Feedback</string>
    <string name="rate_app_notification_action_feedback">FEEDBACK</string> 
    <string name="rate_app_feedback_url" translatable="false">https://qsurvey.mozilla.com/s3/Firefox-Lite-v2-5-Survey1</string>
...
    <string name="bookmark_edit_name">Name</string>
    <!-- The label of the textbox where user can type the url of the bookmark -->
    <string name="bookmark_edit_location">Location</string>
    <!-- Message shown for a few seconds after bookmark edit is saved. -->
    <string name="bookmark_edit_success">Bookmark updated</string>
    <!-- Message shown in Bookmarks panel when the bookmark list is empty. -->
    <string name="bookmarks_empty_view_msg">No bookmarks</string>
    <!-- Label for editing a bookmark which is available next to the bookmark item. -->
    <string name="edit_bookmark">Edit</string>

    <!-- Content portal -->
    <!-- Title of news portal page -->
    <string name="label_menu_news">News</string>
...
