...
    <item name="settings" type="id" />
    <item name="open_default" type="id" />
    <item name="open_select_browser" type="id" />
    <item name="custom_tab_menu_item" type="id" />
    <item name="finish" type="id" />
    <item name="next" type="id" />
    <item name="main_list" type="id" />
    <item name="content_image" type="id" />
    <item name="status" type="id"/>
    <item name="row_id" type="id"/>
    <item name="empty_view_container" type="id"/>
    <item name="empty_view_text" type="id"/>
    <item name="empty_view_image" type="id"/>
    <item name="telemetry_category_name" type="id"/>
    <item name="telemetry_subcategory_id" type="id"/>

    <!-- Menu Items -->
    <item name="menu_bookmark" type="id"/>
    <item name="menu_download" type="id"/>
    <item name="menu_history" type="id"/>
    <item name="menu_screenshots" type="id"/>
    <item name="menu_turbomode" type="id"/>
    <item name="btn_private_browsing" type="id"/>
    <item name="menu_night_mode" type="id"/>
    <item name="menu_blockimg" type="id"/>
    <item name="menu_find_in_page" type="id"/>
    <item name="menu_delete" type="id"/>
    <item name="menu_preferences" type="id"/>
    <item name="menu_exit" type="id"/>
    <item name="menu_pin_shortcut" type="id"/>

    <!-- Bottom Bar Items -->
    <item name="bottom_bar_tab_counter" type="id"/>
...
