<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/menu_bottom_margin"
    android:paddingStart="@dimen/menu_horizontal_margin"
    android:paddingEnd="@dimen/menu_horizontal_margin" >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container">

        <FrameLayout
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_menu"
            app:layout_behavior="@string/bottom_sheet_behavior"
            app:behavior_hideable="true"
            app:behavior_peekHeight="@dimen/menu_height">

            <org.mozilla.focus.widget.EqualDistributeGrid
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <FrameLayout
                    android:id="@+id/screenshots"
                    android:layout_width="74dp"
                    android:layout_height="52dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless">

                    <View
                        android:id="@+id/img_screenshots_selected"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:layout_gravity="center"
                        android:background="@drawable/menu_tab_selected" />

                    <ImageView
                        android:id="@+id/img_screenshots"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:tint="@color/menu_tab_icon"
                        android:src="@drawable/menu_my_shots_states"/>

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/bookmarks"
                    android:layout_width="74dp"
                    android:layout_height="52dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless">

                    <View
                        android:id="@+id/img_bookmarks_selected"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:layout_gravity="center"
                        android:background="@drawable/menu_tab_selected" />

                    <ImageView
                        android:id="@+id/img_bookmarks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:tint="@color/menu_tab_icon"
                        android:src="@drawable/ic_bookmarks"/>

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/history"
                    android:layout_width="74dp"
                    android:layout_height="52dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless">

                    <View
                        android:id="@+id/img_history_selected"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:layout_gravity="center"
                        android:background="@drawable/menu_tab_selected" />

                    <ImageView
                        android:id="@+id/img_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:tint="@color/menu_tab_icon"
                        android:src="@drawable/menu_history"/>

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/downloads"
                    android:layout_width="74dp"
                    android:layout_height="52dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless">

                    <View
                        android:id="@+id/img_downloads_selected"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:layout_gravity="center"
                        android:background="@drawable/menu_tab_selected" />

                    <ImageView
                        android:id="@+id/img_downloads"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:tint="@color/menu_tab_icon"
                        android:src="@drawable/menu_download"/>

                </FrameLayout>

            </org.mozilla.focus.widget.EqualDistributeGrid>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/paletteLightGreyA100"
                android:layout_marginTop="53dp" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/main_content"
                android:layout_marginTop="102dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/title"
                android:textColor="@color/paletteLightBlack100"
                android:textSize="16dp"
                android:fontFamily="sans-serif-medium"
                android:layout_marginStart="20dp"
                android:layout_marginTop="74dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top" />

        </FrameLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>
