<resources>
    <string name="app_name">bhaskar</string>
</resources>
